Warp Painting is functional

--- a/src/main/resources/assets/super_block_world/lang/en_us.json
+++ b/src/main/resources/assets/super_block_world/lang/en_us.json
@@ -12,6 +12,10 @@
   "block.super_block_world.hardstone": "Hardstone",
   "block.super_block_world.hardstone_bricks": "Hardstone Bricks",
   "block.super_block_world.smooth_hardstone": "Smooth Hardstone",
+  "block.super_block_world.packed_cloud": "Packed Cloud",
+  "block.super_block_world.cloud_stairs": "Cloud Stairs",
+  "block.super_block_world.cloud_slab": "Cloud Slab",
+  "block.super_block_world.rainbow_tiles": "Rainbow Tiles",
   "block.super_block_world.star_cluster": "Star Cluster",
   "block.super_block_world.white_flowerbed": "White Flowerbed",
   "block.super_block_world.yellow_flowerbed": "Yellow Flowerbed",
