--- a/src/main/resources/assets/super_block_world/lang/en_us.json
+++ b/src/main/resources/assets/super_block_world/lang/en_us.json
@@ -164,8 +164,8 @@
   "item.super_block_world.raw_bronze": "Raw Bronze",
   "item.super_block_world.bronze_ingot": "Bronze Ingot",
   "item.super_block_world.power_shard": "Power Shard",
+  "item.super_block_world.red_star_bit": "Red Star Bit",
   "item.super_block_world.yellow_star_bit": "Yellow Star Bit",
-  "item.super_block_world.green_star_bit": "Green Star Bit",
   "item.super_block_world.blue_star_bit": "Blue Star Bit",
   "item.super_block_world.purple_star_bit": "Purple Star Bit",
   "item.super_block_world.subcon_thread": "Subcon Thread",
