--- a/src/main/resources/assets/super_block_world/lang/en_us.json
+++ b/src/main/resources/assets/super_block_world/lang/en_us.json
@@ -208,8 +208,10 @@
   "subtitles.super_block_world.entity.luma.hurt": "Luma hurts",
   "subtitles.super_block_world.entity.luma.death": "Luma dies",
   "subtitles.super_block_world.entity.hungry_luma.ambient": "Hungry Luma chirps",
+  "subtitles.super_block_world.entity.hungry_luma.eat": "Hungry Luma eats",
+  "subtitles.super_block_world.entity.hungry_luma.transform": "Hungry Luma screeches",
+  "subtitles.super_block_world.entity.hungry_luma.poof": "Hungry Luma poofs",
   "subtitles.super_block_world.entity.hungry_luma.hurt": "Hungry Luma hurts",
-  "subtitles.super_block_world.entity.hungry_luma.transform": "Hungry Luma transforms",
   "subtitles.super_block_world.entity.hungry_luma.death": "Hungry Luma dies",
   "subtitles.super_block_world.entity.boom_boom.ambient": "Boom Boom grunts",
   "subtitles.super_block_world.entity.boom_boom.spin": "Boom Boom spins",
