--- a/src/main/resources/assets/super_block_world/lang/en_us.json
+++ b/src/main/resources/assets/super_block_world/lang/en_us.json
@@ -178,9 +178,13 @@
   "block.super_block_world.mayoi_leaves": "Mayoi Leaves",
   "block.super_block_world.fruiting_mayoi_leaves": "Fruiting Mayoi Leaves",
   "block.super_block_world.mayoi_sapling": "Mayoi Sapling",
+  "block.super_block_world.brown_toad_stool": "Brown Toad Stool",
+  "block.super_block_world.red_toad_stool": "Red Toad Stool",
   "block.super_block_world.red_grass": "Red Grass",
   "block.super_block_world.subcon_palm": "Subcon Palm",
   "block.super_block_world.subcon_palm_stem": "Subcon Palm Stem",
+  "block.super_block_world.beanstalk_palm": "Beanstalk",
+  "block.super_block_world.beanstalk_palm_stem": "Beanstalk Stem",
   "block.super_block_world.white_flowerbed": "White Flowerbed",
   "block.super_block_world.yellow_flowerbed": "Yellow Flowerbed",
   "item.super_block_world.warp_painting": "Warp Painting",
