--- a/src/main/resources/assets/super_block_world/lang/en_us.json
+++ b/src/main/resources/assets/super_block_world/lang/en_us.json
@@ -183,8 +183,8 @@
   "block.super_block_world.red_grass": "Red Grass",
   "block.super_block_world.subcon_palm": "Subcon Palm",
   "block.super_block_world.subcon_palm_stem": "Subcon Palm Stem",
-  "block.super_block_world.beanstalk_palm": "Beanstalk",
-  "block.super_block_world.beanstalk_palm_stem": "Beanstalk Stem",
+  "block.super_block_world.beanstalk": "Beanstalk",
+  "block.super_block_world.beanstalk_stem": "Beanstalk Stem",
   "block.super_block_world.white_flowerbed": "White Flowerbed",
   "block.super_block_world.yellow_flowerbed": "Yellow Flowerbed",
   "item.super_block_world.warp_painting": "Warp Painting",
@@ -213,10 +213,12 @@
   "item.super_block_world.shy_guy_spawn_egg": "Shy Guy Spawn Egg",
   "item.super_block_world.luma_spawn_egg": "Luma Spawn Egg",
   "item.super_block_world.hungry_luma_spawn_egg": "Hungry Luma Spawn Egg",
+  "item.super_block_world.unagi_spawn_egg": "Maw-Ray Spawn Egg",
   "item.super_block_world.boom_boom_spawn_egg": "Boom Boom Spawn Egg",
   "entity.super_block_world.shy_guy": "Shy Guy",
   "entity.super_block_world.luma": "Luma",
   "entity.super_block_world.hungry_luma": "Hungry Luma",
+  "entity.super_block_world.unagi": "Maw-Ray",
   "entity.super_block_world.boom_boom": "Boom Boom",
   "entity.super_block_world.hammer": "Hammer",
   "entity.super_block_world.star_bit": "Star Bit",
@@ -251,6 +253,9 @@
   "subtitles.super_block_world.entity.hungry_luma.poof": "Hungry Luma poofs",
   "subtitles.super_block_world.entity.hungry_luma.hurt": "Hungry Luma hurts",
   "subtitles.super_block_world.entity.hungry_luma.death": "Hungry Luma dies",
+  "subtitles.super_block_world.entity.unagi.hurt": "Maw-Ray hurts",
+  "subtitles.super_block_world.entity.unagi.death": "Maw-Ray dies",
+  "subtitles.super_block_world.entity.unagi.flop": "Maw-Ray flops",
   "subtitles.super_block_world.entity.boom_boom.ambient": "Boom Boom grunts",
   "subtitles.super_block_world.entity.boom_boom.spin": "Boom Boom spins",
   "subtitles.super_block_world.entity.boom_boom.dizzy": "Boom Boom dizzies",
